<resources>
    <string name="app_name">MerrMeQera</string>
    <string name="home">FAQJA KRYESORE</string>
    <string name="profile">PROFILE</string>
    <string name="logout">DIL</string>
    <string name="feedback">FEEDBACK</string>
    <string name="favorites">TË PREFERUARAT</string>
    <string name="about">Rreth Nesh</string>
    <string name="description">MerrMeQira është një aplikacion i dedikuar për qira të patundshmërive ekskluzivisht në Prishtinë.\n\Përmes këtij aplikacioni synojmë të lehtësojmë kërkimin dhe komunikimin  në mes të qirradhënësit dhe qirramarrësit potencial.\n\Qirradhënësit do të kenë një platformë në të cilin mund të paraqesin pronat e tyre dhe specifikat e tjera, ndërsa qirramarrësit do të kenë mundësine të kërkojne dhe të vendosin për cilëndo pronë që u përshtatet.  </string>
    <string name="remember">Më mbaj mend</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua_ut_enim_ad_minim_veniam_quis_nostrud_exercitation_ullamco_laboris_nisi_ut_aliquip_ex_ea_commodo_consequat_duis_aute_irure_dolor_in_reprehenderit_in_voluptate_velit_esse_cillum_dolore_eu_fugiat_nulla_pariatur_excepteur_sint_occaecat_cupidatat_non_proident_sunt_in_culpa_qui_officia_deserunt_mollit_anim_id_est_laborum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
</resources>